--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calculadora",
+  "name": "calculate-vuejs",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "vue": "^3.5.11"
   },
   "devDependencies": {
